<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_description">Application to track your Sega CD game collection.\n\nCopyright (c) 2010-2014 Hugues Johnson\n\nhttp://HuguesJohnson.com/</string>
    <string name="app_name">Sega CD Collector</string>
    <string name="auctionlist_error">Sorry, no results found for: </string>
    <string name="auctionlist_searching">Searching for auctions...</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_clearfilter">Clear Filter</string>
    <string name="button_close">Close</string>
    <string name="button_filter">Apply Filter</string>
    <string name="button_save">Save</string>
    <string name="checkbox_box">Have Box</string>
    <string name="checkbox_case">Have Case</string>
    <string name="checkbox_game">Have Game</string>
    <string name="checkbox_instructions">Have Instructions</string>
    <string name="checkbox_wishlist">Track on Wish List</string>
    <string name="export_file_name">My-SegaCD-Collection_</string>
    <string name="filterdialog_title">Filter</string>
    <string name="help_url">http://huguesjohnson.com/sega-cd-collector/</string>
    <string name="label_cancel">Cancel</string>
    <string name="label_export">Export</string>
    <string name="label_export_hint">The exported collection will be stored on your SD card under the /Sega CD Collector/ folder. To import this on a new device either copy the file to the same directory or the root of the SD card on the new device.</string>
    <string name="label_exportname">Export file name:</string>
    <string name="label_exportformat">Export file format:</string>
    <string name="label_json">JSON</string>
    <string name="listingdetail_caption_auction">Auction</string>
    <string name="listingdetail_caption_buyitnow">Buy it now</string>
    <string name="listingdetail_caption_unknown">Not specified</string>
    <string name="listingdetail_label_endtime">End Time: </string>
    <string name="listingdetail_label_link">Open listing on </string>
    <string name="listingdetail_label_listingtype">Listing Type: </string>
    <string name="listingdetail_label_location">Location: </string>
    <string name="listingdetail_label_price">Current Price: </string>
    <string name="listingdetail_label_shipping">Shipping: </string>
    <string name="listingdetail_label_starttime">Start Time: </string>
   	<string name="textview_filter">Title Contains: </string>
</resources>
